--- a/env.example
+++ b/env.example
@@ -1,5 +1,8 @@
 # Database Configuration
-DATABASE_URL=postgresql://username:password@localhost:5432/calorie_counter
+# Supabase Database URL with connection pooling (recommended for production)
+# Get this from your Supabase project settings > Database > Connection String
+# Make sure to replace the password placeholder with your actual database password
+DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres
 
 # External APIs
 USDA_API_KEY=your_usda_api_key_here
