--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
+    "postgres": "^3.4.7",
     "winston": "^3.17.0",
     "zod": "^3.25.67"
   },
