--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "dev": "tsx src/index.ts",
+    "dev": "tsx watch src/index.ts",
+    "dev:nodemon": "nodemon --exec tsx src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "vercel-build": "tsc",
@@ -45,12 +46,14 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.9",
     "@types/pg": "^8.15.4",
     "drizzle-kit": "^0.31.4",
+    "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
