--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,10 @@
 {
     "version": 2,
-    "builds": [
-      {
+    "builds": [      {
         "src": "src/index.ts",
         "use": "@vercel/node",
         "config": {
-          "includeFiles": ["src/**", "api-docs.html"]
+          "includeFiles": ["src/**", "index.html"]
         }
       }
     ],
